# Blocks

./: README.md  blocks.sln
blocks/: CMakeLists.txt  blocks.vcxproj  blocks.vcxproj.filters  camera.c  camera.h  headers.h  image.h  legacy.c  linear_algebra.c  linear_algebra.h  main.c  plattform.c  plattform.h  utils.c  utils.h  world.c  world.h
blocks/src/: argb_image.h  camera.c  camera.h  chunk.c  chunk.h  headers.h  linear_algebra.c  linear_algebra.h  main.c  platform.c  platform.h  render.c  render.h  resource_manager.c  resource_manager.h  resources.h  types.h  utils.c  utils.h  world.c  world.h
blocks/src/platform/: platform.h  platform_linux.c  platform_win32.c  platform_win64.c
blocks/src/platform/Linux/: platform_linux.c  platform_linux.h
blocks/src/platform/Windows/: platform_win32.c  platform_win32.h  platform_win64.c  platform_win64.h
blocks/src/resource_loader/: argb_image_loader.c  argb_image_loader.h
blocks/src/resource_manager/: argb_image_loader.c  argb_image_loader.h  resource_manager.c
